kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reflexia
  labels:
    name: reflexia
    app: reflexia
